--- a/src/components/styles/NavBar.css
+++ b/src/components/styles/NavBar.css
@@ -1,7 +1,3 @@
-.navbar {
-  height: 5.5rem;
-}
-
 .scrolled {
   height: auto;
 }
@@ -15,4 +11,20 @@
 }
 .navbar-nav > li > a:hover {
   border-top: 3px solid var(--primary-blue);
+}
+
+.logoText {
+  font-size: 1rem;
+}
+
+@media (max-width: 1200px) {
+  .logoText {
+    width: 20rem;
+  }
+}
+
+@media (max-width: 576px) {
+  .logoText {
+    width: 15rem;
+  }
 }
