--- a/src/components/styles/Page.css
+++ b/src/components/styles/Page.css
@@ -1,3 +1,23 @@
+.news-wrapper {
+  background-color: rgb(245, 245, 245);
+  color: black;
+  height: 600px;
+  overflow-y: auto;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+.news-wrapper::-webkit-scrollbar {
+  display: none;
+}
+
+@media (max-width: 992px) {
+  .news-wrapper {
+    height: 450px;
+    overflow-y: hidden;
+  }
+}
+
 [class*="info-block"] {
   height: 120px;
   transition: background-color 0.4s ease;
