--- a/src/components/styles/NavBar.css
+++ b/src/components/styles/NavBar.css
@@ -1,9 +1,41 @@
 .navbar {
+  --max-height: 85px;
+  --max-height-scrolled: 50px;
+  --max-height-logo: 80px;
+  --max-height-logo-scrolled: 48px;
+  --min-height: 45px;
+  --min-height-logo: 42px;
+
   background-color: rgb(253, 254, 255);
+  height: var(--max-height);
+
+  transition: height 0.3s ease;
 }
 
 .scrolled {
-  height: auto;
+  height: var(--max-height-scrolled);
+}
+
+.scrolled-img {
+  height: var(--max-height-logo-scrolled) !important;
+}
+
+@media (max-width: 768px) {
+  .navbar {
+    height: var(--min-height);
+  }
+}
+
+.logo {
+  height: var(--max-height-logo);
+
+  transition: height 0.3s ease-in-out;
+}
+
+@media (max-width: 768px) {
+  .logo {
+    height: var(--min-height-logo) !important;
+  }
 }
 
 .navbar-nav > li > a {
