--- a/src/scss/components/_socials.scss
+++ b/src/scss/components/_socials.scss
@@ -17,11 +17,6 @@
   transition: width 0.4s ease, color 0.1s 0.4s;
 }
 
-.slide:hover {
-  width: 10rem;
-  color: aliceblue;
-}
-
 .slide > .text-on-hover {
   display: none;
 }
@@ -32,18 +27,65 @@
 
 .odno:hover {
   background-color: rgb(255, 136, 0);
+  width: 10rem;
+  color: aliceblue;
 }
 
 .tele:hover {
   background-color: rgb(51, 144, 236);
+  width: 8rem;
+  color: aliceblue;
 }
 
 .vk:hover {
   background-color: rgb(0, 119, 255);
+  width: 8rem;
+  color: aliceblue;
+}
+
+.about {
+  font-weight: 700;
+  text-transform: uppercase;
+  color: aliceblue;
+}
+
+@media (max-width: 1140px) {
+  .about {
+    font-size: 0.8rem;
+  }
 }
 
 .about:hover {
   background-color: rgba(184, 184, 184, 0.479);
+}
+
+.warnings {
+  align-items: center;
+  color: aliceblue;
+  line-height: 1rem;
+  font-size: 0.8rem;
+  font-weight: 700;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  text-transform: uppercase;
+}
+
+@media (max-width: 540px) {
+  .warnings {
+    font-size: 0.45rem;
+  }
+}
+
+@media (max-width: 720px) {
+  .warnings {
+    font-size: 0.5rem;
+  }
+}
+
+@media (max-width: 1140px) {
+  .warnings {
+    font-size: 0.65rem;
+  }
 }
 
 .warnings:hover {
